# hft-course

./: CMakeLists.txt  marketOrder  swapExercise
lec2/: marketOrder.cpp  swapExercise.cpp
lec3/: advancedPtr.cpp
lec4/: Thousandnodes.cpp  arraysPtr.cpp
lec5/: memoryPool.cpp
lec6/: factorialMetaProgramming.cpp  fibonacciMetaProgramming.cpp  gcdMetaprogramming.cpp  inheritance.cpp  primeMetaProgramming.cpp  templateSpecializations.cpp  templates.cpp
lec7/: inheritanceThroughTemplates.cpp
movesemantics/: charSemantics.cpp  vectorSemantics.cpp
